# nrf24l01-tx

./: .gitignore  Cargo.toml  README.md  build.rs  custom_link.x  openocd.gdb
src/: lib.rs  main.rs  state.rs  sync_cell.rs
