[package]
authors = ["binotation"]
edition = "2021"
readme = "README.md"
name = "nrf24l01-tx"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
# cortex-m-semihosting = "0.3.3"
panic-semihosting = "0.6.0"
heapless = "0.8.0"

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

[dependencies.stm32l4]
path = "../../stm32-rs-nightlies/stm32l4"
features = ["stm32l4x2"]

[dependencies.nrf24l01-commands]
path = "../../god-is-a-crab/nrf24l01-commands"

# this lets you use `cargo fix`!
[[bin]]
name = "nrf24l01-tx"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
